# fastapi-components

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
auth/: .pre-commit-config.yaml  README.md  pyproject.toml
auth/fastapi-components-auth/: auth_route.py
auth/fastapi_components_auth/: auth_route.py  auth_service.py
