[tool.poetry]
name = "fastapi_components_auth"
version = "0.1.0"
description = "Reusable authentication module for FastAPI"
authors = ["Qasim"]
readme = "README.md"
packages = [{ include = "fastapi_components_auth" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.116.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
tree = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.7.1"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"